--- a/package.json
+++ b/package.json
@@ -35,5 +35,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://id.github.id/movie_app_2020"
+  "homepage": "https://Moonbyeongchan123.github.io/movie_app_2020"
 }
